force-app/main/default/objects/Program__c/fields/First_Session__c.field-meta.xml
<CustomField>
    <fullName>First_Session__c</fullName>
    <label>First Session</label>
    <summarizedField>Program_Session__c.Date__c</summarizedField>
    <summaryForeignKey>Program_Session__c.Program__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>