force-app/main/default/objects/Program__c/fields/Instructor1__c.field-meta.xml
<CustomField>
    <fullName>Instructor1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Program instructor must be entered as a contact.</description>
    <inlineHelpText>Program instructor must be entered as a contact.</inlineHelpText>
    <label>Instructor 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs (Instructor 1)</relationshipLabel>
    <relationshipName>Programs1</relationshipName>
    <type>Lookup</type>
</CustomField>