force-app/main/default/objects/Program__c/fields/Instructor2__c.field-meta.xml
<CustomField>
    <fullName>Instructor2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Program instructor must be entered as a contact.</description>
    <inlineHelpText>Program instructor must be entered as a contact.</inlineHelpText>
    <label>Instructor 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Programs (Instructor 2)</relationshipLabel>
    <relationshipName>Programs2</relationshipName>
    <type>Lookup</type>
</CustomField>