force-app/main/default/objects/Program__c/fields/Last_Session__c.field-meta.xml
<CustomField>
    <fullName>Last_Session__c</fullName>
    <label>Last Session</label>
    <summarizedField>Program_Session__c.Date__c</summarizedField>
    <summaryForeignKey>Program_Session__c.Program__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>