force-app/main/default/objects/Program__c/fields/Registrants__c.field-meta.xml
<CustomField>
    <fullName>Registrants__c</fullName>
    <label>Registrants</label>
    <summaryForeignKey>Program_Registration__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>