force-app/main/default/objects/Program__c/fields/Sessions__c.field-meta.xml
<CustomField>
    <fullName>Sessions__c</fullName>
    <label># Sessions</label>
    <summaryForeignKey>Program_Session__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>