force-app/main/default/objects/Program__c/listViews/Active_Programs.listView-meta.xml
<ListView>
    <fullName>Active_Programs</fullName>
    <columns>NAME</columns>
    <columns>Registrants__c</columns>
    <columns>Hours__c</columns>
    <columns>Days__c</columns>
    <columns>Instructor1__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Programs</label>
</ListView>