force-app/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Days__c</columns>
    <columns>Hours__c</columns>
    <columns>Registrants__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>