force-app/main/default/objects/Program__c/listViews/All_Programs.listView-meta.xml
<ListView>
    <fullName>All_Programs</fullName>
    <columns>NAME</columns>
    <columns>Days__c</columns>
    <columns>Description__c</columns>
    <columns>Registrants__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Programs</label>
</ListView>